--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,10 +1,13 @@
-
 FROM python:3.11-slim
 
+# Diretório de trabalho dentro do container
 WORKDIR /app
 
-# Sem COPY
+# Instalar dependências básicas
+RUN pip install --no-cache-dir fastapi uvicorn pandas
 
-RUN pip install --no-cache-dir pandas
+# Expor a porta da API FastAPI
+EXPOSE 8000
 
-CMD ["sleep", "infinity"]
+# Comando que o container vai rodar por padrão
+CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000"]
